tests/mm0_mmu/fail/bad-sort423.mm0
-- bad modifier order
free strict provable sort s423;